--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "PaloIT",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Palo IT Mobile App",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
   "devDependencies": {
     "bower": "^1.3.9",
     "grunt": "^0.4.5",
+    "grunt-bump": "0.0.15",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-nodeunit": "^0.4.1",
