fix grunt bump config

--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "grunt": "^0.4.5",
     "grunt-bump": "0.0.15",
     "grunt-cli": "^0.1.13",
+    "grunt-contrib-compress": "^0.10.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-uglify": "^0.5.1",
+    "grunt-exec": "^0.4.6",
+    "grunt-phonegap-build": "0.0.8",
+    "grunt-string-replace": "^0.2.7",
     "jshint-stylish": "^0.4.0",
     "requirejs": "2.1.14",
     "yo": "^1.2.1"
